double scroll css fix

--- a/src/components/v2/values/chartValuesDiff/ChartValuesView.scss
+++ b/src/components/v2/values/chartValuesDiff/ChartValuesView.scss
@@ -344,6 +344,12 @@
                         height: calc(100vh - 162px) !important;
                     }
                 }
+                .chart-view-code-editor-container.manifest-view {
+                                    .react-monaco-editor-container,
+                                    .details-loader-height {
+                                        height: calc(100vh - 192px) !important;
+                                    }
+                                }
 
                 .empty-state {
                     height: calc(100vh - 130px) !important;
